--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,10 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                Hyperblog
+                <span id="tagline">Tu blog de cabecera</span>
+            </div>
             <div id="post">
                 <h1>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</h1>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, </p>
