--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>El titulo del Blog editado desde github</title>
+        <title>Bienvenidos al Blog 2.0</title>
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
