color de fondo, logo nuevo, y mejor color de header

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,11 +1,12 @@
 <html>
     <head>
-        <title>Bienvenidos al Blog 2.0</title>
+        <title>Bienvenidos al Blog 2.0 </title>
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/dragon.png" />
                 Hyperblog
                 <span id="tagline">Tu blog conflictivo desde cabecera</span>
             </div>
