--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,7 @@
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, </p>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, </p>
                 <p>me gusta el conflicto?</p>
+                <img src="imagenes/tigre.jpeg">
             </div>
             <div id="footer">
                 Este es mi hermoso footer!
