cambio al titulo y el color del footer hecho con amend

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="cabecera">
                 <img id="logo" src="imagenes/dragon.png" />
                 Hyperblog
-                <span id="tagline">Tu blog conflictivo desde cabecera</span>
+                <span id="tagline">Tu blog de confianza</span>
             </div>
             <div id="post">
                 <h1>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</h1>
